--- a/sosastocks.css
+++ b/sosastocks.css
@@ -5,7 +5,7 @@
 	padding: 0;
 }
 #banner{
-background: url(images/stock2);
+background: url(images/Stocks1.jpg);
 	background-size: cover;
 	background-position: center;
 	height: 100vh;
