--- a/sosastocks.css
+++ b/sosastocks.css
@@ -8,7 +8,7 @@
 background: url(images/Stocks1.jpg);
 	background-size: cover;
 	background-position: center;
-	height: 100vh;
+	height: 100px;
 }
 body{font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", "sans-serif";
 	font-size: 100%;
