--- a/sosastocks.css
+++ b/sosastocks.css
@@ -1,287 +1,65 @@
-@charset "UTF-8";
-/* CSS Document */
+*{
+    margin: 0;
+    padding: 0;
+    .jersey-20-regular {
+        font-family: "Jersey 20", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+      }
+      
+}
+#banner{
+    background: linear-gradient (rgba(rgb(255, 255, 255), rgb(0, 0, 0), rgb(0, 0, 0), alpha))
+        image(Stocks1.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 100px;
+}
+.logo{
+    width: 140px;
+    position: absolute;
+    top: 4%;
+    left: 10%;
 
-body{font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", "sans-serif";
-	font-size: 100%;
-line-height: 1.0cm;
-color: black;
-background: #c7c7c7;
 }
+.banner-text{
+    text-align: center;
+    color: white;
+    padding-top: 180px;
+}
+.banner-text h1{
+font-size: 130px;
+}
+.banner-text p{
+    font-size: 20px;
+    font-style: italic;
+}
+.banner-btn{
+    margin: 70px auto 0;
+}
+.banner-btn a{
+    width: 150px;
+    text-decoration: none;
+    display: inline-block;
+    margin: 0 10px;
+    padding: 12px 0;
+    color: #fff;
+    border: .5px solid #fff;
+    z-index: 1;
+    transition: color 0.5s;
+}
+.banner-btn a span{
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #fff;
+    z-index: -1;
+    transition: 0.5s;
+}
+.banner-btn a:hover span{
+    width: 100%;
 
-h1 {font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", "sans-serif";
-	font-size: 3em ;
 }
-
-a {font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", "sans-serif";
-	text-decoration: none;
-	color: rgba rgba(0,113,201,1.00);
-	border: .5px solid rgba(144,0,143,.50)
-}
-
-a:hover {color: rgba(202,0,3,1.00);
-	border: 1px dotted rgba(0,9,236,1.00)
-}
-
-/*--this is my mobile Nav--*/
-
-.menu-open {
-	transform: translate(-230px,0);
-}
-
-#nav {
-	background: #24222d;
-	text-align: center;
-	margin: 0;
-	padding: 15px 0;
-	width: 100%;
-}
-
-#navli {
-	display: inline-block;
-}
-
-#navli {
-	display: block;
-	color: #fff;
-	font-size: 1rem;
-	padding: 10px 25px;
-	border: 2px solid transparent;
-	text-decoration: none;
-	transition: al 0.3s;
-}
-#nav li a:hover {
-	border: 2px solid #fff;
-	color:aquamarine;
-}
-
-/* Burger */
-.toggle {
-	display: none;
-	position: absolute;
-	left: -55px;
-	top: 0;
-	cursor: pointer;
-	background: rgba(0,0,0,0.6);
-	padding: 15px 15px 10px;
-}
-
-.toggle .bar1,
-.toggle .bar2,
-.toggle .bar3 {
-	width: 25px;
-	height: 2px;
-	background: #FFF;
-	margin-bottom: 8px;
-	transition: all 0.6s;
-}
-/*Change it to an X*/
-#nav.open .toggle .bar1 {
-	transform: rotate(45deg)translate(8px,7px);
-}
-#nav.open .toggle .bar2 {
-	opacity: 0;
-}
-#nav.open .toggle .bar3 {
-	transform: rotate(-45deg) translate(7px,-6px);
-}
-.container {width: 100%;
-	min-height: 30px;
-	position: relative;
-	margin:auto;
-	}
-
-.row,
-.column {
-	box-sizing: border-box;
-}
-
-.row:before,
-.row:after {
-	content: " ";
-	display: table;
-}
-
-.row:after {
-	clear: both;
-}
-
-.column { 
-position: relative;
-float: left;
-}
-
-.column + .column {
-	margin-left: 1.6%;
-}
-
-.column-12 {
-	width: 6.8666666667%;
-}
-
-.column-11{
-	width: 15.3333333333%;
-}
-
-.column-10 {
-	width: 23.8%;
-}
-
-.column-9 {
-	width: 32.2666666667%;
-}
-.column-8 {
-	width: 40.7333333333%;
-}
-.column-7 {
-	width: 49.2%
-}
-.column-6 {
-	width: 57.6666666667%;
-}
-
-.column-5 {
-	width: 66.1333333333%;
-}
-
-.column-4{
-	width: 74.6%;
-}
-
-.column-3{
-	width: 83.0666666667%;
-}
-.column-2 {
-	width: 91.5333333333%;
-}
-.column-1 {
-	width: 100%;
-}
-
-@media only screen and (max-width: 750px) {
-	.column-1,
-	.column-2,
-	.column-3,
-	.column-4,
-	.column-5,
-	.column-6,
-	.column-7,
-	.column-8,
-	.column-9,
-	.column-10,
-	.column-11,
-	.column-12 {
-		width: auto;
-		float: none;
-	}
-	
-	.column + .column {
-		margin-left: 0;
-	}
-}
-
-.column {
-	border: 1px solid #333;
-	border-radius: 4px;
-	padding: 6px;
-	min-height: 30px;
-}
-.object-fit_fill {
-	-o-object-fit: fill;
-		object-fit: fill;
-}
-.object-fit_contain {
-	-o-object-fit: contain;
-		object-fit: contain;
-}
-
-.object-fit_cover {
--o-object-fit: cover;
-	object-fit: cover;
-}
-
-.object-fit_none {
-	-o-object-fit: none;
-	object-fit: none;
-}
-
-.object-fit_scale-down {
-	-o-object-fit: scale-down;
-	object-fit: scale-down;
-}
-
-img[class] {
-	width: 100%;
-}
-.row {
-	margin-bottom: 10px;
-}
-
-/* Add a black background color to the top navigation */
-.topnav {
-  background-color: #333;
-  overflow: hidden;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add an active class to highlight the current page */
-.topnav a.active {
-  background-color: #4CAF50;
-  color: white;
-}
-
-/* Hide the link that should appear as a dropdown on small screens */
-.topnav .icon {
-  display: none;
-}
-
-/* Responsive navigation menu */
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-/* Style the navigation menu dropdown button (icon) */
-.topnav a.icon {
-  float: right;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* Style the dropdown content */
-.topnav.responsive {position: relative;}
-.topnav.responsive .icon {
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-.topnav.responsive a {
-  float: none;
-  display: block;
-  text-align: left;
-}
-
-
-
+.banner-btn a:hover
