--- a/sosastocks.css
+++ b/sosastocks.css
@@ -68,10 +68,18 @@ color: #000;
 
 #sideNav{
     width: 120px;
-    height:100vh;
-    position: fixedl;
+    height: 100vh;
+    position: fixed;
     right: 0;
     top: 0;
     background: #0061d1;
-    z-index:2;
+    z-index: 2;
+}
+nav ul li{
+    list-style: none;
+    margin: 50px 20px;
+}
+nav ul li a{
+    text-decoration: none;
+    color: #fff;
 }
