--- a/sosastocks.css
+++ b/sosastocks.css
@@ -1,4 +1,4 @@
-*{
+e*{
     margin: 0;
     padding: 0;
     .jersey-20-regular {
@@ -67,7 +67,7 @@ color: #000;
 }
 
 #sideNav{
-    width: 120px;
+    width: 250px;
     height: 100vh;
     position: fixed;
     right: 0;
