--- a/sosastocks.css
+++ b/sosastocks.css
@@ -83,3 +83,19 @@ nav ul li a{
     text-decoration: none;
     color: #fff;
 }
+#manuBtn{
+    width: 50px;
+    height: 50px;
+    background: #009688;
+    text-align: center;
+    position: fixed;
+    right: 30px;
+    top: 20px;
+    border-radius: 3px;
+    z-index 3;
+    cursor: pointer;
+}
+#manuBtn img{
+    width: 20px;
+    margin-top: 15px;
+}
